--- a/shutter.html
+++ b/shutter.html
@@ -12,7 +12,7 @@
 <h1 class="logo-lantau"><p class="mb">The</p><p class="mb">Lantau</p><p class="mb">Shutter</p>
     <span class="pc">Lantua Shutter</span>
 </h1>
-<p class="home-lantau"><a href="{{ site.url }}">home.</a></p>
+<p class="home-lantau"><a href="http://www.lumpychen.com">home.</a></p>
 
 <div class="img-content">
     <hr class="mb hr-cut">
@@ -49,7 +49,7 @@
 <div class="site-copyright">
     <div class="footer-ph"></div>
     <span id="c-lum">© 2014 Lumpychen </span>
-    <span id="design">designed by&nbsp;<a href="{{ site.url }}" id="name">Lumpy Chen</a></span>
+    <span id="design">designed by&nbsp;<a href="http://www.lumpychen.com" id="name">Lumpy Chen</a></span>
 </div>
 
 </body>
