--- a/blog.html
+++ b/blog.html
@@ -51,11 +51,11 @@
 
                 </div>
                 <ul class="menu-check cf">
-                    <li><a href="">Home.</a></li>
-                    <li><a href="">Blog.</a></li>
-                    <li><a href="">C V .</a></li>
-                    <li><a href="">Lab .</a></li>
-                    <li><a href="">LTST.</a></li>
+                    <li><a href="http://www.lumpychen.com">Home.</a></li>
+                    <li><a href="http://www.lumpychen.com/blog">Blog.</a></li>
+                    <li><a href="http://www.lumpychen.com/cv">C V .</a></li>
+                    <li><a href="http://www.lumpychen.com/lab">Lab .</a></li>
+                    <li><a href="http://www.lumpychen.com/shutter">LTST.</a></li>
                 </ul>
                 <div class="hr"></div>
                 <ul class="page-position">
@@ -77,7 +77,7 @@
                 <p class="sub-heading">
                      Lavish Angel Never Tell About U :)
                 </p>
-                <a href="www.lumpychen.com/shutter.html">
+                <a href="http://lumpychen.github.io">
                     <button>Go to the blog page</button>
                 </a>
             </div>
@@ -128,15 +128,15 @@
                 <div class="content">
                     <h2>The Lastest</h2>
                     <div class="hr"></div>
-                    <p>Lorem ipsum dolor sit onsectetur adipisicing elit. Accusdodunt, libero molestiae neque no.</p>
+                    <p>I'm not Longing for making sense, and done with the pleading ignorance this time.</p>
                 </div>
             </section>
             <section class="spotlight cf">
 
                 <div class="content">
-                    <h2>第一个标题</h2>
+                    <h2>Chance of Rain</h2>
                     <div class="hr"></div>
-                    <p>Lorem ipsum dolor sit onsectetur adipisicing elit. Accusdodunt, libero molestiae neque no.</p>
+                    <p>This voice without a sound which will lead you home.</p>
                 </div>
                 <div class="image"></div>
 
@@ -144,10 +144,9 @@
             <section class="spotlight cf">
                 <div class="image"></div>
                 <div class="content">
-                    <h2>第一个标题</h2>
+                    <h2>Hold it if u want</h2>
                     <div class="hr"></div>
-                    <p>Lorem ipsum dolor sit onsectetur adipisicing elit. Accusdodunt, libero molestiae neque no.</p>
-                </div>
+                    <p>You don't know what you got, till it's gone.</p>
             </section>
         </section>
         <!--spotlight end-->
@@ -163,31 +162,31 @@
                 <ul class="card-group cf">
                     <li class="card">
                         <h3>CSS</h3>
-                        <p>Latest:</p>
+                            <p>Latest</p>
                         <img src="img/css.png" alt="">
                     </li>
                     <li class="card">
                         <h3>Javascript</h3>
-                        <p>Latest:</p>
+                        <p>Latest</p>
                         <img src="img/js.png" alt="">
                     </li>
                     <li class="card">
                         <h3>Node.js</h3>
-                        <p>Latest:</p>
+                        <p>Latest</p>
                         <img src="img/nodejs.png" alt="">
                     </li>
                     <li class="card">
                         <h3>JS Framework</h3>
-                        <p>Latest:</p>
+                        <p>Latest</p>
                         <img src="img/ng.png" alt="">
                     <li class="card">
                         <h3>Essay</h3>
-                        <p>Latest:</p>
+                        <p>Latest</p>
                         <img src="img/essay.png" alt="">
                     </li>
                     <li class="card">
                         <h3>Management</h3>
-                        <p>Latest:</p>
+                        <p>Latest</p>
                         <img src="img/business.png" alt="">
                     </li>
                 </ul>
@@ -212,11 +211,11 @@
                 <div class="site-footer-nav">
                     <p class="footer-ph"></p>
                     <ul>
-                        <li><a href="{{ site.url }}">
-                        Home.</a></li><li><a href="{{ site.url }}/lum-blog">
-                        Blog.</a></li><li><a href="{{ site.url }}/lum-cv">
-                        CV.</a></li><li><a href="{{ site.url }}/lum-tech">
-                        Lab.</a></li><li><a href="{{ site.url }}/lum-shutter">
+                        <li><a href="http://www.lumpychen.com">
+                        Home.</a></li><li><a href="http://www.lumpychen.com/blog">
+                        Blog.</a></li><li><a href="http://www.lumpychen.com/cv">
+                        CV.</a></li><li><a href="http://www.lumpychen.com/lab">
+                        Lab.</a></li><li><a href="http://www.lumpychen.com/shutter">
                         Shutter.</a></li>
                     </ul>
                 </div>
@@ -234,7 +233,7 @@
                 </div>
                 <div class="site-copyright">
                     <span id="c-lum">© 2014 Lumpychen </span>
-                    <span id="design">designed by&nbsp;<a href="{{ site.url }}" id="name">Lumpy Chen</a></span>
+                    <span id="design">designed by&nbsp;<a href="http://www.lumpychen.com" id="name">Lumpy Chen</a></span>
                 </div>
             </div>
         </footer>
