--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <ul class="cf">
                 <li><a href="http://www.zhihu.com/people/irvingchen">Zhihu.</a></li>
                 <li><a href="http://github.com/LumpyChen">Github.</a></li>
-                <li><a href="http://www.lumpychen.com/blog/">Blog.</a></li>
-                <li><a href="http://www.lumpychen.com/cv/">CV.</a></li>
-                <li><a href="http://www.lumpychen.com/lab/">Lab.</a></li>
-                <li><a href="http://www.lumpychen.com/shutter/">Shutter.</a></li>
+                <li><a href="http://lumpychen.github.io">Blog.</a></li>
+                <li><a href="http://www.lumpychen.com/cv">CV.</a></li>
+                <li><a href="http://www.lumpychen.com/lab">Lab.</a></li>
+                <li><a href="http://www.lumpychen.com/shutter">Shutter.</a></li>
             </ul>
         </nav>
 
@@ -40,7 +40,7 @@
 
         <div class="site-copyright">
             <span id="c-lum">© 2014 Lumpychen </span>
-            <span id="design">designed by&nbsp;<a href="{{ site.url }}" id="name">Lumpy Chen</a></span>
+            <span id="design">designed by&nbsp;<a href="http://www.lumpychen.com" id="name">Lumpy Chen</a></span>
         </div>
     </div>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
